# personal-notes

./: .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint  404.html  Dockerfile  Makefile  README.md  daily.xml  index.html  mkdocs.yml  monthly.xml  pyproject.toml  sitemap.xml  weekly.xml  yearly.xml
.devcontainer/: .devcontainer.json  devcontainer.json
.devcontainer/scripts/: initialize.sh  post-create.sh
.github/: gh-pages.yml
.github/workflows/: pages.yaml
IAC/Pulumi/: index.html
IAC/Terraform/: index.html
about/: index.html
assets/: ads.txt
cloud/aws/app_runner/: index.html
cloud/aws/batch/: index.html
cloud/aws/lambda/: index.html
cloud/aws/steps/: index.html
cloud/github/codespaces/: index.html
cloud/google/Bigquery/: index.html
cloud/google/app_engine/: index.html
cloud/google/cloud_functions/: index.html
cloud/google/cloud_run/: index.html
cloud/google/gcloud/: index.html
data_science/statistics/intro/: index.html
docs/: about.md  hooks.py  index.md  mlops_intro.md
docs/IAC/: Pulumi.md  Terraform.md
docs/cloud/aws/: app_runner.md  batch.md  lambda.md  steps.md
docs/cloud/github/: codespaces.md
docs/cloud/google/: Bigquery.md  app_engine.md  cloud_functions.md  cloud_run.md  gcloud.md
docs/data_science/statistics/: intro.ipynb
docs/generative_ai/: Deploy LLMS.md  Evaluate LLMs.md  Fine Tuning.md  Reinforcement Learning From Human Feedback.md  adapting_models.md  hugginface_intro.ipynb  huggingface.md  instruction_fine_tuning.md  introduction.md  lora.md  peft.md  probing.md  prompting.md  rlhf.md  transfer-learning-using-mobilenetv3.ipynb
docs/generative_ai/llms/: build_applications.md  (+5 more)
docs/mlops/: continous_delivery.md  mlops_intro.md
docs/newsletter/: 0_newsletter_index.md
docs/python/: .meta.yml  environments.md  pytest.md
docs/stylesheets/: extra.css  links.css
generative_ai/Deploy LLMS/: index.html
generative_ai/Evaluate LLMs/: index.html
generative_ai/Fine Tuning/: index.html
generative_ai/Reinforcement Learning From Human Feedback/: index.html
generative_ai/adapting_models/: index.html
generative_ai/build_applications/: index.html
generative_ai/deployment/: index.html
generative_ai/evaluation/: index.html
generative_ai/hugginface_intro/: index.html
generative_ai/huggingface/: index.html
generative_ai/instruction_fine_tuning/: index.html
generative_ai/introduction/: index.html
generative_ai/lora/: index.html
generative_ai/peft/: index.html
generative_ai/probing/: index.html
generative_ai/prompting/: index.html
generative_ai/pytorch_intro/: index.html
generative_ai/rlhf/: index.html
generative_ai/transfer-learning-using-mobilenetv3/: index.html
hooks/: index.html
mlops/continous_delivery/: index.html
mlops/mlops_intro/: index.html
newsletter/0_newsletter_index/: index.html
python/environments/: index.html
python/pytest/: index.html
search/: search_index.json
theme/: main.html
(+90 files in other folders)
